--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "framer-motion": "^11.2.11",
     "heroicons": "^2.1.4",
     "moment": "^2.30.1",
-    "next": "14.0.4",
+    "next": "^14.2.5",
     "next-auth": "^4.24.7",
     "next-video": "^1.1.0",
     "next-videos": "^1.4.1",
